c/examples/writing-a-c-compiler-tests/tests/chapter_17/valid/sizeof/sizeof_not_evaluated.c
void exit(int status);
int foo(void) { exit(10); }

int main(void) {
  // make sure foo isn't actually called
  return sizeof(foo());
}