c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/scalar_expressions/void_condition_for_loop.c
void foo(void) {
    return;
}

int main(void) {
    // void expressions are non-scalar, so they can't be used as controlling conditions
    for (int i = 0; foo(); )
        ;
    return 0;
}